some spanish to english translations

--- a/ejercicio-R1/R1-informe.ipynb
+++ b/ejercicio-R1/R1-informe.ipynb
@@ -27,13 +27,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Distribucion de bauxita\n",
+    "### Bauxite distribution\n",
     "\n",
-    "Siendo la distribucion de bauxita_kg aproximadamente normal, el valor esperado de bauxita a extraer de un asteroide sera entre:\n",
+    "Being the distribution of bauxite_kg approximately normal, the expected value of bauxite to extract from an asteroid will be between:\n",
     "\n",
     "=> (mean - std ; mean + std)\n",
     "\n",
-    "* mean = valor esperado = 5.986221\n",
+    "* mean = expected value = 5.986221\n",
     "\n",
     "* std = standard desviation = 2.177836\n",
     "\n"
@@ -50,13 +50,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correlacion entre violet_stone_count y bauxite_kg\n",
+    "### Correlation between violet_stone_count and bauxite_kg\n",
     "\n",
-    "Siendo la correlacion = 0.9781637250632228 \n",
+    "Being the correlation = 0.9781637250632228\n",
     "\n",
-    "Afirmamos que la relacion lineal entre violet_stone_count y bauxite_kg es muy fuerte.\n",
+    "We affirm that the linear relationship between violet_stone_count and bauxite_kg is very strong.\n",
     "\n",
-    "Se advierte, que la presencia de correlacion no implica causalidad."
+    "It is noted that the presence of correlation does not imply causation."
    ]
   },
   {
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analisis y confirmacion visual"
+    "### Analysis and visual confirmation"
    ]
   },
   {
@@ -102,9 +102,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Confirmamos visualmente la relacion lineal entre variables\n",
-    "- Visualmente no se detectan outliers\n",
-    "\n"
+    "- We visually confirm the linear relationship between variables\n",
+    "- Visually no outliers are detected\n"
    ]
   },
   {
@@ -118,11 +117,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Funcion representativa:\n",
-    "La función que representa las relaciónes entre variables en el dataset es:\n",
-    "- Y(X = violet_stone_count) = 0.05151773*X + 1.89389521 -> bauxite_kg in asteroid\n",
+    "### Representative function:\n",
+    "The function that represents the relationships between variables in the dataset is:\n",
+    "- Y (X = violet_stone_count) = 0.05151773 * X + 1.89389521 -> bauxite_kg in asteroid\n",
     "\n",
-    "En otras palabras, si se puede hacer un recuento de violet_stone_count en un asteroide, usando la funcion proporcionada se puede estimar cuanta bauxite_kg se espera encontrar en el asteroide."
+    "In other words, if you can count violet_stone_count on an asteroid, using the provided function you can estimate how much bauxite_kg you expect to find on the asteroid."
    ]
   },
   {
@@ -136,9 +135,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aclaraciones\n",
-    "- precision instrumento de medicion: Se asume error 0 en instrumentos de medicion.\n",
-    "- precision conteo de piedras violetas: Se asume que el conteo por asteroide fue correcto en todos los casos."
+    "### Observations\n",
+    "- precision measuring instrument: Error 0 is assumed in measuring instruments.\n",
+    "- precision counting of violet stones: It is assumed that the asteroid count was correct in all cases."
    ]
   },
   {
@@ -151,21 +150,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
