--- a/ejercicio-R2/R2 analysis.ipynb
+++ b/ejercicio-R2/R2 analysis.ipynb
@@ -4,10 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Algunos mineros aseguran que observan unas rocas marrones que al principio parecian \n",
-    "no diferenciarse del asteroide, pero que también serían indicadores de bauxita.\n",
+    "Some miners say they see brown rocks that at first seemed not differentiate from the asteroid, but they would also be indicators of bauxite.\n",
     "\n",
-    "Con los nuevos datos recolectados R2 tratar de predecir la bauxita que tendrá un asteroide."
+    "With the new data collected R2 try to predict the bauxite that an asteroid will have."
    ]
   },
   {
@@ -84,7 +83,7 @@
     }
    ],
    "source": [
-    "# Matriz de correlaciones como heatmap\n",
+    "# Correlation matrix as heatmap\n",
     "plt.figure(figsize=(10, 10))\n",
     "sns.heatmap(df.corr(), square=True, annot=True, fmt='.2f')\n",
     "plt.show()"
@@ -94,8 +93,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se observa fuerte relacion lineal entre bauxita y violet_stone_count pero como bauxita sera mi target,\n",
-    "entonces no nos afectara en el entrenamiento de el modelo."
+    "Strong linear relationship is observed between bauxite and violet_stone_count but as bauxite it will be my target,\n",
+    "then it will not affect us in the training of the model."
    ]
   },
   {
@@ -109,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Entreno modelo "
+    "## Traning model "
    ]
   },
   {
@@ -419,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analisis de performance & sensitividad "
+    "## Performance & sensitivity analysis"
    ]
   },
   {
@@ -439,7 +438,6 @@
     }
    ],
    "source": [
-    "\n",
     "client_data = (113, 426)\n",
     "regr.predict([client_data])"
    ]
@@ -484,7 +482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- el rango observado entre Trials no es significativo, por ende se re-valida la uniformidad en la distribucion de datos que podemos observar en el grafico lineal"
+    "- the range observed between Trials is not significant, therefore the uniformity in the distribution of data that we can observe in the linear graph is re-validated"
    ]
   },
   {
@@ -518,8 +516,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- No se observa rastros de overfitting o underfitting\n",
-    "- Se necesitan pocos puntos para que el modelo se ajuste al comportamiento del dataset"
+    "- No trace of overfitting or underfitting is observed\n",
+    "- Few points are needed for the model to adjust to the behavior of the dataset"
    ]
   },
   {
@@ -539,21 +537,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
