--- a/ejercicio-R3/R3 analysis.ipynb
+++ b/ejercicio-R3/R3 analysis.ipynb
@@ -4,12 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analizando los asteroides se encontro que contienen cantidades significativas de deuterio. \n",
-    "Lluego del descubrimientos se empezo a buscar indicadores de la cantidad de deuterio, los mineros\n",
-    "dicen que parece estar relacionado nuevamente con la cantidad de piedras violetas, \n",
-    "tambien observaron un polvo violeta sobre la superficie, y un liquido amarillo.\n",
+    "Analyzing the asteroids it was found that they contain significant amounts of deuterium.\n",
+    "After the discoveries began to look for indicators of the amount of deuterium, the miners say that it seems to be related again to the amount of violet stones, they also observed a violet powder on the surface, and a yellow liquid.\n",
     "\n",
-    "A partir de los datos recolectados R3 tratar de predecir la cantidad de deuterio que tendrá un asteroide."
+    "From the collected data R3 try to predict the amount of deuterium that an asteroid will have."
    ]
   },
   {
@@ -86,7 +84,7 @@
     }
    ],
    "source": [
-    "# Matriz de correlaciones como heatmap\n",
+    "# correlation matrix as heatmap\n",
     "plt.figure(figsize=(10, 10))\n",
     "sns.heatmap(df.corr(), square=True, annot=True, fmt='.2f')\n",
     "plt.show()"
@@ -96,11 +94,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Se observa relacion lineal entre violet_dust_kg y violet_stone_count\n",
-    "\n",
-    "- Se observa relacion lineal entre deuterium y violet_stone_count\n",
-    "- Se observa relacion lineal entre deuterium y violet_dust_kg\n",
-    "- Se observa relacion lineal entre deuterium y yellow_liquid"
+    "- A linear relationship between violet_dust_kg and violet_stone_count is observed\n",
+    "- A linear relationship between deuterium and violet_stone_count is observed\n",
+    "- A linear relationship between deuterium and violet_dust_kg is observed\n",
+    "- A linear relationship between deuterium and yellow_liquid is observed"
    ]
   },
   {
@@ -481,7 +478,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Entreno modelo "
+    "## Training model "
    ]
   },
   {
@@ -650,7 +647,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- El modelo sera entrenado con los features ['violet_stone_count', 'yellow_liquid_l'] por devolver mejores valores en las metricas Mean squared error y r2_score"
+    "- The model will be trained with the features ['violet_stone_count', 'yellow_liquid_l'] to return better values in the metrics Mean squared error and r2_score"
    ]
   },
   {
@@ -664,7 +661,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analisis de performance & sensitividad "
+    "## Performance & sensitivity analysis"
    ]
   },
   {
@@ -691,8 +688,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- No se observa rastros de overfitting o underfitting\n",
-    "- Se necesitan pocos puntos para que el modelo se ajuste al comportamiento del dataset"
+    "- No trace of overfitting or underfitting is observed\n",
+    "- Few points are needed for the model to adjust to the behavior of the dataset"
    ]
   },
   {
@@ -737,7 +734,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- el rango observado entre Trials no es significativo, por ende se re-valida la uniformidad en la distribucion de datos que podemos observar en el grafico lineal"
+    "- the range observed between Trials is not significant, therefore the uniformity in the distribution of data that we can observe in the linear graph is re-validated"
    ]
   },
   {
