--- a/ejercicio-R4/R4-analysis.ipynb
+++ b/ejercicio-R4/R4-analysis.ipynb
@@ -4,10 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dentro de los asteroides también se encontró hierro, parece que los principales indicadores\n",
-    "de la cantidad de hierro son las piedras violetas y el tamaño de los mismos.\n",
+    "Within the asteroids, iron was also found. It seems that the main indicators of the amount of iron are the violet stones and the size of them.\n",
     "\n",
-    "Con los datos recolectados R4 tratar de predecir la cantidad de hierro que tendrá un asteroide."
+    "With the data collected R4 try to predict the amount of iron that an asteroid will have."
    ]
   },
   {
@@ -204,7 +203,7 @@
     }
    ],
    "source": [
-    "# Matriz de correlaciones como heatmap\n",
+    "# correlation matrix as heatmap\n",
     "plt.figure(figsize=(10, 10))\n",
     "sns.heatmap(df.corr(), square=True, annot=True, fmt='.2f')\n",
     "plt.show()"
@@ -212,23 +211,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['violet_stone_count', 'asteroid_size_km3', 'iron_kg'], dtype='object')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -729,7 +715,7 @@
     }
    ],
    "source": [
-    "# Matriz de correlaciones como heatmap\n",
+    "# correlation matrix as heatmap\n",
     "plt.figure(figsize=(10, 10))\n",
     "sns.heatmap(df_.corr(), square=True, annot=True, fmt='.2f')\n",
     "plt.show()"
@@ -995,7 +981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analisis de performance & sensitividad"
+    "## Performance & sensitivity analysis"
    ]
   },
   {
@@ -1022,8 +1008,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- No se observa rastros de overfitting o underfitting\n",
-    "- Se necesitan pocos puntos para que el modelo se ajuste al comportamiento del dataset"
+    "- No trace of overfitting or underfitting is observed\n",
+    "- Few points are needed for the model to adjust to the behavior of the dataset"
    ]
   },
   {
@@ -1066,7 +1052,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- el rango observado entre Trials no es significativo, por ende se re-valida la uniformidad en la distribucion de datos que podemos observar en el grafico lineal"
+    "- the range observed between Trials is not significant, therefore the uniformity in the distribution of data that we can observe in the linear graph is re-validated."
    ]
   },
   {
@@ -1127,21 +1113,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
