--- a/ejercicio-R5/R5 analysis.ipynb
+++ b/ejercicio-R5/R5 analysis.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Debido a que el trabajo de los mineros es considerado extremadamente insalubre la empresa, por regulación estatal, tiene que dar 60 días de licencia psicológica por año. Se busca entender qué es lo que produce que los empleados se tomen días por problemas psicológicos. Consultando con psicólogos, les indicaron que el problema se podía originar por los viajes largos y el exceso de tiempo ocioso, propusieron que un indicador podría ser la madurez mental, reflejado en la edad de los mineros. Además uno de los psicólogos propuso medir cuánto leen los mineros.\n",
-    " \n",
-    "La empresa recabó datos de los últimos años de algunos de sus mejores empleados. Se les mostró una hoja de un largo estandarizado y se le pidió a cada minero que estime cuántas hojas leía al día. Se armó un dataset con la cantidad de días que se pidieron de licencia en los últimos 3 años, su edad actual y la cantidad de hojas que leen por día.\n",
+    "Because the work of the miners is considered extremely unhealthy, the company, by state regulation, has to give 60 days of psychological leave per year. The goal is to understand what causes employees to take days for psychological problems. Consulting with psychologists, they indicated that the problem could be caused by long trips and excessive idle time, they proposed that an indicator could be mental maturity, reflected in the age of the miners. In addition one of the psychologists proposed to measure how much miners read.\n",
     "\n",
-    "Con los datos recolectados R5 tratar de predecir la cantidad de días de licencia psicológica que se tomaría un empleado en el próximo año.\n",
+    "The company collected data from the past years from some of its best employees. They were shown a sheet of a standardized length and each miner was asked to estimate how many sheets he read per day. A dataset was put together with the number of days that licenses were requested in the last 3 years, their current age and the number of sheets they read per day.\n",
+    "\n",
+    "With the data collected R5 try to predict the number of days of psychological leave that an employee would take in the next year.\n",
     "\n"
    ]
   },
@@ -182,7 +182,7 @@
     "sns.pairplot(df)\n",
     "plt.show()\n",
     "print()\n",
-    "print(\"- observamos outliers\")"
+    "print(\"- we observe outliers\")"
    ]
   },
   {
@@ -204,7 +204,7 @@
     }
    ],
    "source": [
-    "# Matriz de correlaciones como heatmap\n",
+    "# correlation matrix as heatmap\n",
     "plt.figure(figsize=(10, 10))\n",
     "sns.heatmap(df.corr(), square=True, annot=True, fmt='.2f')\n",
     "plt.show()"
@@ -272,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Remuevo outliers"
+    "## Removing outliers"
    ]
   },
   {
@@ -337,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#identifico outliers a mano & #elimino outliers a mano\n",
+    "#identifying outliers by hand & #removing outliers by hand\n",
     "outliers = df[(df['days_in_yrs_samples'] > 175) & (df['pages_per_day_samples'] < 50)].index.tolist()\n",
     "df.drop(outliers, inplace=True)\n",
     "\n",
@@ -411,17 +411,18 @@
     }
    ],
    "source": [
-    "# Probamos crear la feature df['pages_per_day_samples_x_age_samples'] = df.pages_per_day_samples * df.age_samples\n",
-    "# con la intencion de averiguar si existe sinergia entre estas, obtener un mejor coef de correlacion y\n",
-    "# que nos sea util al calcular la regresion lineal, pero la feature resultante no tenia tanto mas coef de corr\n",
-    "# que las feature que la formaron. Ademas producia un grado de multicolinearidad alto en el dataset y no \n",
-    "# aporto en la busqueda de mejores metricas al entrenar el modelo.\n",
+    "# We tried to create the feature df ['pages_per_day_samples_x_age_samples'] = df.pages_per_day_samples * df.age_samples\n",
+    "# with the intention of finding out if there is synergy between them, obtain a better correlation coefficient and\n",
+    "# to be useful when calculating the linear regression, but the resulting feature did not have so much more correlation coefficient\n",
+    "# than the features that formed it. It also produced a high degree of multicollinearity in the dataset and did not\n",
+    "# I contribute to the search for better metrics when training the model.\n",
     "\n",
-    "# Probamos con la transformacion df['log_pages_per_day_samples'] = np.log(df.pages_per_day_samples)\n",
-    "# porque days_in_yrs_samples parece tener una relacion logaritmica, pero no se ajusta del todo bien.\n",
-    "# De hecho si entrenamos la linear regression solo con log_pages_per_day_samples y chequeamos la \n",
-    "# 1er linear_assumption podemos notar que los residuals no se distribuyen simetricamente (se adjunta img)\n",
+    "# We test with the transformation df ['log_pages_per_day_samples'] = np.log (df.pages_per_day_samples)\n",
+    "# because days_in_yrs_samples seems to have a logarithmic relationship, but it doesn't quite fit.\n",
+    "# In fact if we train the linear regression only with log_pages_per_day_samples and check the\n",
+    "# 1st linear_assumption we can notice that the residuals are not symmetrically distributed (img is attached)\n",
     "#\n",
+    "\n",
     "Image(\"picture-01.png\", width=300)"
    ]
   },
@@ -438,7 +439,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Averiguamos que la relacion entre 'pages_per_day_samples' y 'days_in_yrs_samples' tienen la forma y = 1/Ax + B\n",
+    "# We find out that the relationship between 'pages_per_day_samples' and \n",
+    "# 'days_in_yrs_samples' have the form y = 1 / Ax + B\n",
     "\n",
     "df['pages_per_day_samples_transf'] = 1 / (df.pages_per_day_samples)\n",
     "df = df[(df != 0).all(1)] #removing -inf values ( X == 0 )"
@@ -471,7 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Observamos que pudimos transformar pages_per_day_samples en una funcion lineal"
+    "- We note that we were able to transform pages_per_day_samples into a linear function"
    ]
   },
   {
@@ -519,11 +521,10 @@
     "plt.show()\n",
     "\n",
     "print(\"\"\"\n",
-    "#Ahora sabemos que la funcion tiene la forma de y = 1/Ax + B\n",
-    "#funcion_days_in_yrs_samples(pages_per_day_samples) = 1800/pages_per_day_samples\"\n",
-    "#entonces si t = 1 / pages_per_day_samples me queda que:\n",
-    "#funcion_days_in_yrs_samples(t) = 1800 * t\n",
-    "\"\"\")"
+    "#Now we know that the function has the form of y = 1 / Ax + B\n",
+    "#funcion_days_in_yrs_samples (pages_per_day_samples) = 1800 / pages_per_day_samples \"\n",
+    "#then if t = 1 / pages_per_day_samples we have that:\n",
+    "#funcion_days_in_yrs_samples (t) = 1800 * t\"\"\")"
    ]
   },
   {
@@ -616,7 +617,7 @@
     "print_model_statistics(regr, y_test, y_pred)\n",
     "\n",
     "print(\"\")\n",
-    "print(\"- Se puede observer que agregar la age_samples no mejora las metricas\")"
+    "print(\"- It can be seen that adding the age_samples does not improve the metrics\")"
    ]
   },
   {
@@ -663,8 +664,8 @@
     }
    ],
    "source": [
-    "# Entreno modelo lineal con 2 features y grafico el plano resultante de la reg lineal. Esto es solo por deporte, \n",
-    "# ya sabemos que age_samples aporta poco y nada a la regresion.\n",
+    "# I train linear model with 2 features and graph the plane resulting from the linear reg. I'm just playing,\n",
+    "# we already know that age_samples contributes little and nothing to the regression.\n",
     "#\n",
     "\n",
     "X = df[['age_samples',\n",
@@ -746,7 +747,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analisis de performance & sensitividad "
+    "### Performance & sensitivity analysis"
    ]
   },
   {
@@ -789,8 +790,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- No se observa rastros de overfitting o underfitting\n",
-    "- Se necesitan pocos puntos para que el modelo se ajuste al comportamiento del dataset"
+    "- No trace of overfitting or underfitting is observed\n",
+    "- Few points are needed for the model to adjust to the behavior of the dataset"
    ]
   },
   {
@@ -835,7 +836,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- el rango observado entre Trials no es significativo, por ende se re-valida la uniformidad en la distribucion de datos que podemos observar en el grafico lineal"
+    "- the range observed between Trials is not significant, therefore the uniformity in the distribution of data that we can observe in the linear graph is re-validated"
    ]
   },
   {
@@ -1215,14 +1216,14 @@
     "for param_name in sorted(best_params.keys()):\n",
     "    print('%s: %r' % (param_name, best_params[param_name]))\n",
     "    \n",
-    "print(\"\\n- Las metricas obtenidas con XGBoost son mucho peores que las obtenidas con la reg lineal o la NN\")"
+    "print(\"\\n- The metrics obtained with XGBoost are much worse than those obtained with the linear reg or the NN\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No se continuan haciendo analisis en XGBoost, haremos foco en el modelo lineal y/o NN"
+    "### XGBoost analysis won't continue , we will focus on the linear model and / or NN"
    ]
   },
   {
