--- a/ejercicio-R5/R5 informe.ipynb
+++ b/ejercicio-R5/R5 informe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Informe "
+    "# Report "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,17 +157,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se haces las siguientes observaciones:\n",
+    "The following observations are made:\n",
     "    \n",
-    "    - hay al menos 1 persona registrada que no leyo ninguna pagina en los ultimos 3 años\n",
-    "    - hay al menos 1 persona registrada que no tomo licencia en los ultimos 3 años\n",
+    "     - there is at least 1 registered person who has not read any page in the last 3 years\n",
+    "     - there is at least 1 registered person who has not taken a license in the last 3 years\n",
     "    \n",
-    "    - el promedio de paginas leidas es de 52.2\n",
-    "    - el promedio de edad de trabajadores es de 36.5\n",
+    "     - the average number of pages read is 52.2\n",
+    "     - the average age of workers is 36.5\n",
     "    \n",
-    "    - el maximo de paginas leidas es de 250\n",
-    "    - el trabajador de mayor edad registrado es de 60 años\n",
-    "    - el trabajador que mas licencias tomo en 3 años fue de 180"
+    "     - the maximum number of pages read is 250\n",
+    "     - the oldest registered worker is 60 years old\n",
+    "     - The worker who took the most licenses in 3 years was 180"
    ]
   },
   {
@@ -212,14 +212,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Observamos que la relacion entre days_in_yrs_samples y pages_per_day_samples es el de una funcion racional, es decir de la forma y = A/X + B entonces procedemos a transformarla para obtener la relacion entre estas 2 features de forma lineal y poder modelar esta relacion con una regresion lineal\n",
+    "#### We note that the relationship between days_in_yrs_samples and pages_per_day_samples is that of a rational function, that is, of the form y = A / X + B so we proceed to transform it to obtain the relationship between these 2 features in a linear way and to model this relationship with a linear regression\n",
     "\n",
-    "#### Tambien eliminamos la feature age_samples porque observamos que no tiene correlacion con days_in_yrs_samples"
+    "#### We also remove the feature age_samples because we note that it has no correlation with days_in_yrs_samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Removemos outliers"
+    "## Removing outliers"
    ]
   },
   {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,12 +356,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Observamos outliers que permanecen, los removemos a mano"
+    "We observe outliers that remain, we remove them by hand"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -416,13 +416,13 @@
        "145                     24                   12"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#identifico outliers a mano\n",
+    "#identifying outliers By hand\n",
     "df[(df['days_in_yrs_samples'] < 20) & (df['pages_per_day_samples'] < 60)]"
    ]
   },
@@ -432,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#elimino outliers a mano\n",
+    "#deleting outliers\n",
     "df.drop([13,16,145], inplace=True)"
    ]
   },
@@ -486,12 +486,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Averiguamos que la relacion entre 'pages_per_day_samples' y 'days_in_yrs_samples' tienen la forma y = 1/Ax + B\n",
+    "# We find out that the relationship between 'pages_per_day_samples' and 'days_in_yrs_samples' have the form y = 1 / Ax + B\n",
     "\n",
-    "# al aplicar 1/x debemos hacer un tratamiento de zeros, las opciones son:\n",
-    "# - eliminar las rows que tengan 0\n",
-    "# - cambiar el 0 por 0.001 (donde se observa que si la escala del dataset ya es pequeña en general \n",
-    "#   entonces el reemplazo debera ser de un numero menor, por ejemplo 0.000000001)\n",
+    "# when applying 1 / x we must do a zeros treatment, the options are:\n",
+    "# - delete rows that have 0\n",
+    "# - change 0 to 0.001 (where it is observed that if the scale of the dataset is already small in general\n",
+    "# then the replacement should be of a smaller number, for example 0.000000001)\n",
     "#\n",
     "\n",
     "df['pages_per_day_samples'].replace(0, 0.00001)\n",
@@ -527,7 +527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Observamos que pudimos transformar la relacion de pages_per_day_samples y days_in_yrs_sample en una relacion lineal"
+    "We note that we were able to transform the relationship of pages_per_day_samples and days_in_yrs_sample into a linear relationship"
    ]
   },
   {
@@ -721,9 +721,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La funcion que representa la relacion entre pages_per_day_samples y days_in_yrs_samples es: \n",
-    "#### days_in_yrs_samples = 2603/pages_per_day_samples + -9.2\n",
-    "debido a que days_in_yrs_samples es inversamente proporcional a pages_per_day_samples podemos observar que si un obrero lee muy pocas hojas por dia, al leer mas hojas, la cantidad de licencias que se toma bajara rapidamente. Asi mismo , los obreros que ya leen muchas paginas por dia no presentaran una significativa baja en las licencias tomadas si estos leen mas hojas"
+    "The function that represents the relationship between pages_per_day_samples and days_in_yrs_samples is:\n",
+    "#### days_in_yrs_samples = 2603 / pages_per_day_samples + -9.2\n",
+    "Because days_in_yrs_samples is inversely proportional to pages_per_day_samples we can see that if a worker reads very few sheets per day, when reading more sheets, the number of licenses taken will drop quickly. Likewise, workers who already read many pages per day will not present a significant drop in the licenses taken if they read more pages."
    ]
   },
   {
@@ -736,21 +736,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
