--- a/ejercicio-boston-housing/data-analysis.ipynb
+++ b/ejercicio-boston-housing/data-analysis.ipynb
@@ -155,7 +155,7 @@
     }
    ],
    "source": [
-    "# Matriz de correlaciones como heatmap\n",
+    "# correlation matrix as heatmap\n",
     "plt.figure(figsize=(10, 10))\n",
     "sns.heatmap(df.corr(), square=True, annot=True, fmt='.2f')\n",
     "plt.show()"
@@ -165,9 +165,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pareciera existir cierto grado de relacion lineal entre:\n",
-    "- RM y MEDV\n",
-    "- RM y PTRATIO"
+    "There seems to exists some degree of linear relationship between:\n",
+    "- RM and MEDV\n",
+    "- RM and PTRATIO"
    ]
   },
   {
