--- a/ejercicio-boston-housing/prediction-linear.ipynb
+++ b/ejercicio-boston-housing/prediction-linear.ipynb
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- LSTAT pareciera tener una rel log con MEDV. Validaremos que las assumptions se cumplan."
+    "- LSTAT seems to have a log relationship with MEDV. We will validate that the assumptions are met."
    ]
   },
   {
